# Ferrite

./: .markdownlint.jsonc  Cargo.toml  LICENSE  README.md
assets/: default-config.toml
assets/packs/: example.toml
src/: colors.rs  config.rs  icons.rs  layout.rs  main.rs  protocol.rs  state.rs  util.rs
src/modules/: bluetooth.rs  brightness.rs  cpu.rs  date.rs  disk.rs  lang.rs  load.rs  mem.rs  mod.rs  mpris.rs  net.rs  packages.rs  temp.rs  volume.rs  vpn.rs
