[package]
name = "ferrite"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A magnetically attractive sway status bar — low-CPU, configurable, written in Rust"
license = "MIT"
readme = "README.md"
keywords = ["sway", "i3", "waybar", "statusbar", "i3bar"]
categories = ["command-line-utilities"]

[[bin]]
name = "ferrite"
path = "src/main.rs"

[dependencies]
swayipc = "4.0"
zbus = { version = "5.16", default-features = false, features = ["blocking-api", "async-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
time = { version = "0.3.51", features = ["local-offset", "formatting", "parsing"] }
wait-timeout = "0.2"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }